--- a/kube/zookeeper-2-service.yaml
+++ b/kube/zookeeper-2-service.yaml
@@ -15,8 +15,8 @@ spec:
       port: 2888
     - name: election
       port: 3888
-  clusterIP: 10.200.10.32
-  type: ClusterIP
+#  clusterIP: 10.200.10.32
+  type: LoadBalancer
   selector:
     name: zookeeper-2
     zookeeper_id: "2"
